--- a/index.html
+++ b/index.html
@@ -4,9 +4,71 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <title>Настоящая пекарня</title>
 </head>
 <body>
+   <header class="header">
+       <div class="wrapper">
+
+          <div class="header__wrapper">
+            <div class="header__logo">
+                <a href="/" class="header__logo-link">
+                    <img src="./assets/img/logo.png" alt="logo" class="header__logo-pic">
+                </a>
+              </div>  
     
+              <nav class="header__nav">
+                <ul class="header__list">
+                    <li class="header__item">
+                        <a href="#!" class="header__link">Наши продукты</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#!" class="header__link">Акции</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#!" class="header__link">Как купить</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#!" class="header__link">Контакты</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#!" class="header__link">О нас</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#!" class="header__link">Войти</a>
+                    </li>
+                </ul>
+                <div class="header__nav-close">
+                    <span class="header__nav-close-line"></span>
+                    <span class="header__nav-close-line"></span>
+                </div>
+              </nav>
+
+              <div class="header__burger burger">
+                <span class="burger__line burger__line_first"></span>
+                <span class="burger__line burger__line_second"></span>
+                <span class="burger__line burger__line_third"></span>
+              </div>
+          </div>
+
+       </div>
+   </header>
+
+   <main class="main">
+    <section class="intro">
+        <div class="wrapper">
+            <div class="intro__content">
+                <h1 class="intro__title">
+                    Настоящая пекарня
+                </h1>
+                <p class="intro__subtitle">
+                    Мы — команда страстных пекарей, которые создают волшебство из муки, сахара и любви. Наша цель — радовать вас вкусной и ароматной выпечкой каждый день.
+                </p>
+            </div>            
+        </div>        
+    </section>
+   </main>
+   <script src="main.js"></script>
 </body>
 </html>
