--- a/assets/html/buy.html
+++ b/assets/html/buy.html
@@ -17,7 +17,7 @@
           <div class="header__wrapper">
             <div class="logo__langs">
                 <div class="header__logo">
-                    <a href="https://nickolay1986.github.io/bakery_one/" class="header__logo-link">
+                    <a href="/bakery_one/index.html" class="header__logo-link">
                         <img src="../img/logo.png" alt="logo" class="header__logo-pic">
                     </a>
                 </div> 
