--- a/assets/html/offers.html
+++ b/assets/html/offers.html
@@ -17,7 +17,7 @@
           <div class="header__wrapper">
             <div class="logo__langs">
                 <div class="header__logo">
-                    <a href="/" class="header__logo-link">
+                    <a href="../../index.html" class="header__logo-link">
                         <img src="../img/logo.png" alt="logo" class="header__logo-pic">
                     </a>
                 </div> 
