--- a/assets/html/menu.html
+++ b/assets/html/menu.html
@@ -16,7 +16,7 @@
 
           <div class="header__wrapper">
             <div class="logo__langs">
-                    <a href="/" class="header__logo-link">
+                    <a href="../../index.html" class="header__logo-link">
                         <img src="../img/logo.png" alt="logo" class="header__logo-pic">
                     </a>
                 </div> 
