--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
           <div class="header__wrapper">
             <div class="logo__langs">
                 <div class="header__logo">
-                    <a href="/bakery_one/" class="header__logo-link">
-                        <img src="/bakery_one/assets/img/logo.png" alt="logo" class="header__logo-pic">
+                    <a href="./index.html" class="header__logo-link">
+                        <img src="./assets/img/logo.png" alt="logo" class="header__logo-pic">
                     </a>
                 </div> 
             </div>
