--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./assets/css/swiper-bundle.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="icon" type="image/png" href="./assets/img/favicon.png">
+    <base href="/backery_one/">
     <title>Настоящая пекарня</title>
 </head>
 <body>
@@ -17,7 +18,7 @@
           <div class="header__wrapper">
             <div class="logo__langs">
                 <div class="header__logo">
-                    <a href="./index.html" class="header__logo-link">
+                    <a href="./" class="header__logo-link">
                         <img src="./assets/img/logo.png" alt="logo" class="header__logo-pic">
                     </a>
                 </div> 
