--- a/assets/html/menu.html
+++ b/assets/html/menu.html
@@ -74,7 +74,7 @@
     <div class="container"></div><!-- тестовый блок для взаимодействия с текстовым файлом -->
 
    </main>
-   <script type="module" src="../scripts/modules/module-header.js"></script>
+   <!-- <script type="module" src="../scripts/modules/module-header.js"></script> -->
 
    <script type="module" src="../scripts/nav.js"></script>
    <script type="module" src="../scripts/products.js"></script>
